# godwoken-scripts

./: CMakeLists.txt
sim/: meta_contract_sim.c  sudt_sim.c  syscalls_sudt_validator_sim.h
